force-app/main/default/objects/Bank_Account__c/fields/CC_Billing_Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_Cycle_Date__c</fullName>
    <label>CC Billing Cycle Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>