force-app/main/default/objects/Bank_Account__c/fields/CC_Last_Bill_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_Bill_Paid_Date__c</fullName>
    <label>CC Last Bill Paid Date</label>
    <type>Date</type>
</CustomField>