force-app/main/default/objects/Bank_Account__c/fields/CC_Last_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_Paid_Amount__c</fullName>
    <label>CC Last Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>