force-app/main/default/objects/Bank_Account__c/fields/CC_Max_Limit__c.field-meta.xml
<CustomField>
    <fullName>CC_Max_Limit__c</fullName>
    <label>CC Max Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>