force-app/main/default/objects/Bank_Account__c/fields/Investable_Fund__c.field-meta.xml
<CustomField>
    <fullName>Investable_Fund__c</fullName>
    <formula>IF( CONTAINS(Account_Code__c, &apos;-SA&apos;),
  IF( 
    Last_Balance__c -  Emergency_Fund__c &gt; 0, Last_Balance__c -  
     Emergency_Fund__c, 0
  ),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investable Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>