force-app/main/default/objects/Bank_Account__c/fields/Last_Balance__c.field-meta.xml
<CustomField>
    <fullName>Last_Balance__c</fullName>
    <label>Last Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>