force-app/main/default/objects/Bank_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank__c</columns>
    <columns>Last_Balance__c</columns>
    <columns>CC_Available_Limit__c</columns>
    <columns>CC_Max_Limit__c</columns>
    <columns>Emergency_Fund__c</columns>
    <columns>Investable_Fund__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>